--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Build the project
-      run: npm run build
+      run: npm run build-storybook
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
