--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,18 +18,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Setup Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '20.x'
+    - name: Setup pnpm
+      uses: pnpm/action-setup@v4
     - name: Install dependencies
-      run: npm ci
+      run: pnpm install
     - name: Build the project
-      run: npm run build-storybook
+      run: pnpm run build
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
-        path: dist/storybook
+        path: apps/docs/dist/storybook
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
