--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -3,18 +3,6 @@
   "private": false,
   "version": "0.0.1",
   "type": "module",
-  "types": "./dist/index.d.ts",
-  "main": "./dist/index.umd.cjs",
-  "module": "./dist/index.js",
-  "source": "./src/index.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.umd.cjs",
-      "types": "./dist/index.d.ts"
-    }
-  },
-  "typings": "dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/huxulm/vite-ts-lib-starter.git"
@@ -24,10 +12,9 @@
   ],
   "scripts": {
     "dev": "storybook dev -p 6006",
-    "build:js": "tsc -b && vite build --mode library",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "prepare": "npm run build:js",
-    "build-storybook": "storybook build -o dist/storybook"
+    "build": "storybook build -o dist/storybook",
+    "check-types": "tsc --noEmit",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "peerDependencies": {
     "react": ">=16",
@@ -71,9 +58,7 @@
     "storybook-dark-mode": "^4.0.2",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.2.2",
-    "vite": "^5.3.4",
-    "vite-plugin-dts": "^3.9.1",
-    "vite-tsconfig-paths": "^4.3.2"
+    "vite": "^5.3.4"
   },
   "dependencies": {
     "@types/d3-time": "^3.0.3",
