--- a/apps/docs/tsconfig.json
+++ b/apps/docs/tsconfig.json
@@ -1,34 +1,7 @@
 {
+  "extends": "@vizdev/typescript-config/vite.json",
+  "include": ["src"],
   "compilerOptions": {
-    "target": "ES2015",
-    "module": "ESNext",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "jsx": "react-jsx",
-    "moduleResolution": "node",
-    "typeRoots": ["./node_modules/@types"],
-    "allowSyntheticDefaultImports": true,
-    "declaration": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "resolveJsonModule": true,
-    "rootDirs": ["src", "docs"],
-    "noImplicitAny": false,
-    "noImplicitThis": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "allowJs": true,
-    "pretty": true,
-    "outDir": "./dist",
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "ignoreDeprecations": "5.0",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
-  },
-  "include": ["src/**/*", "demo/**/*"],
-  "exclude": ["node_modules", "dist"]
+    "jsx": "react-jsx"
+  }
 }
