--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,3 @@
 packages:
-  # all packages in direct subdirs of packages/
-  - 'packages/*'
-  # all packages in subdirs of components/
-  - 'apps/**'
-  # exclude packages that are inside test directories
-  - '!**/test/**'
+  - "apps/*"
+  - "packages/*"
