--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -20,19 +20,17 @@
     "react-dom": ">=16"
   },
   "devDependencies": {
-    "@vizdev/typescript-config": "workspace:*",
-    "@vizdev/tailwind-config": "workspace:*",
     "@chromatic-com/storybook": "^1.6.1",
     "@storybook/addon-essentials": "^8.2.4",
     "@storybook/addon-interactions": "^8.2.4",
     "@storybook/addon-links": "^8.2.4",
     "@storybook/addon-onboarding": "^8.2.4",
+    "@storybook/addon-themes": "^8.2.9",
     "@storybook/blocks": "^8.2.4",
     "@storybook/manager-api": "^8.2.7",
     "@storybook/react": "^8.2.4",
     "@storybook/react-vite": "^8.2.4",
     "@storybook/test": "^8.2.4",
-    "@storybook/theming": "^8.2.7",
     "@types/d3-array": "^3.2.1",
     "@types/d3-axis": "^3.0.6",
     "@types/d3-brush": "^3.0.6",
@@ -45,6 +43,8 @@
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vizdev/tailwind-config": "workspace:*",
+    "@vizdev/typescript-config": "workspace:*",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
