--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -37,6 +37,8 @@
     "@types/d3-scale": "^4.0.8",
     "@types/d3-selection": "^3.0.10",
     "@types/d3-shape": "^3.1.6",
+    "@types/d3-time": "^3.0.3",
+    "@types/d3-time-format": "^4.0.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/rollup-plugin-peer-deps-external": "^2.2.5",
@@ -62,9 +64,8 @@
     "vite": "^5.3.4"
   },
   "dependencies": {
-    "@types/d3-time": "^3.0.3",
-    "@types/d3-time-format": "^4.0.3",
     "@visx/responsive": "^3.10.2",
+    "@vizdev/ui": "workspace:*",
     "clsx": "^2.1.1",
     "d3-array": "^3.2.4",
     "d3-axis": "^3.0.0",
@@ -73,6 +74,8 @@
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
     "d3-time": "^3.1.0",
-    "d3-time-format": "^4.1.0"
+    "d3-time-format": "^4.1.0",
+    "framer-motion": "^11.5.4",
+    "recharts": "^2.12.7"
   }
 }
